# discord-tools

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/models/: mod.rs
oauth/: Cargo.toml
oauth/src/: client_credentials.rs  error.rs  lib.rs
src/: config.rs  main.rs
src/models/: mod.rs  perms.rs  scope.rs
src/oauth/: client_credentials.rs  mod.rs
