[package]
name = "discord-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive", "env"] }
clap_complete = "3.1"
directories = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.18", features = ["rt-multi-thread", "macros"] }
toml = "0.5.9"
