[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive", "env"] }
clap_complete = "3.1"
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.18", features = ["rt-multi-thread", "macros"] }

common = { path = "../common" }
oauth = { path = "../oauth" }
